--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="https://static.skelbiu.lt/static/images/svg/logotipas_ua.svg?v=4" alt="Skeliu.lt">
+    <a href="./index.html"><img src="https://static.skelbiu.lt/static/images/svg/logotipas_ua.svg?v=4" alt="Skeliu.lt"></a>
 
 </header>
 <nav>
