--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NT-ADS</title>
 <link rel="stylesheet" href="./src/css/style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Inter:wght@100;300;400;500;700;800;900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 <script
 
 src="https://code.jquery.com/jquery-3.3.1.js"
